--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "calculator-reactv2",
+  "name": "undefined-team-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
